# accessibility-sweep

./: .gitignore  CLAUDE.md  README.md  cli.py  pyproject.toml  wcag-sc.json
.claude/: settings.local.json
accessibility_sweep/: analyzer.py  models.py  wcag_lookup.py
accessibility_sweep/agent/: __init__.py  core.py  tools.py
accessibility_sweep/agent/personas/: __init__.py  cognitive.py  journey.py  keyboard.py  screen_reader.py
accessibility_sweep/ai/: enrichment.py  prompts.py
accessibility_sweep/crawler/: auto.py  manual.py
accessibility_sweep/reporter/: html.py  json_out.py  terminal.py
accessibility_sweep/reporter/templates/: report.html
accessibility_sweep/scanner/: apca.py  axe.py  element_context.py  keyboard.py  structure.py
reference/: aria_patterns.json  screen_reader_mappings.json
